fix(theme): increase contrast of disabled text color
Changes the disabled text color from #202020 to #404040 in the compact-purple theme to improve readability and accessibility by increasing the contrast between disabled text and the background.

--- a/themes/compact-purple/variables.scss
+++ b/themes/compact-purple/variables.scss
@@ -12,7 +12,7 @@ $brand-menu: #111111;
 $brand-secondary: #1d4ed8;
 $brand-clickable: #43226e;
 $text-color: #eeeeee;
-$text-color-disabled: #202020;
+$text-color-disabled: #404040;
 $link-color: #6ea6ff;
 $font-size-base: 12px;
 $hidpi-scale-factor: 100%;
